--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "chartjs-plugin-gradient": "^0.6.1",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
