--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -2,7 +2,7 @@
   "name": "proyecto",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -30,7 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "tailwindcss": "^3.4.16",
+    "vite": "^5.4.11"
   }
 }
